--- a/index.html
+++ b/index.html
@@ -1,76 +1,106 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Order Details</title>
+</head>
 <body>
-  <h1>Order Details Lookup</h1>
-  <input type="text" id="orderId" placeholder="Enter Order ID">
-  <button onclick="fetchOrderDetails()">Get Details</button>
-  <div id="result"></div>
+  <h1>Order Management</h1>
+  
+  <form id="orderForm">
+    <label for="orderId">Order ID:</label>
+    <input type="text" id="orderId" placeholder="Enter Order ID" required />
+    <br />
+
+    <label for="agentName">Agent Name:</label>
+    <input type="text" id="agentName" placeholder="Enter Agent Name" />
+    <br />
+
+    <label for="agentRemark">Agent Remark 1:</label>
+    <input type="text" id="agentRemark" placeholder="Enter Agent Remark" />
+    <br />
+
+    <label for="attemptNumber">Attempt Number:</label>
+    <input type="text" id="attemptNumber" placeholder="Enter Attempt Number" />
+    <br />
+
+    <button type="button" onclick="fetchOrderDetails()">Fetch Order Details</button>
+    <button type="button" onclick="submitOrderUpdates()">Submit Updates</button>
+  </form>
 
   <script>
-    const webAppURL = "https://script.google.com/macros/s/AKfycbz_-0fPNGDxbZj1R2H3JzmmDet3KL5WMcxE3-KG1HTC74nkR4fWPsJHdIguXyNY16xj/exec";
+    const SCRIPT_URL = "https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec"; // Replace with your Apps Script URL
 
+    // Fetch order details based on Order ID
     async function fetchOrderDetails() {
       const orderId = document.getElementById("orderId").value.trim();
-
       if (!orderId) {
-        document.getElementById("result").innerText = "Please enter an Order ID.";
+        alert("Please enter an Order ID.");
         return;
       }
 
-      const response = await fetch(`${webAppURL}?orderId=${orderId}`);
-      const data = await response.json();
+      try {
+        const response = await fetch(`${SCRIPT_URL}?orderId=${orderId}`);
+        const data = await response.json();
 
-      if (data.error) {
-        document.getElementById("result").innerText = data.error;
-        return;
+        if (data.error) {
+          alert(`Error: ${data.error}`);
+          return;
+        }
+
+        // Populate form fields with the fetched data
+        document.getElementById("agentName").value = data["AGENT NAME"] || "";
+        document.getElementById("agentRemark").value = data["AGENT REMARK 1"] || "";
+        document.getElementById("attemptNumber").value = data["ATEEMPT NUMBER"] || "";
+        alert("Order details fetched successfully.");
+      } catch (error) {
+        console.error("Error fetching order details:", error);
+        alert("An error occurred while fetching order details.");
       }
-
-      document.getElementById("result").innerHTML = `
-        <div>
-          <p><b>Order ID:</b> ${data["ORDER ID"]}</p>
-          <p><b>Customer Name:</b> ${data["CUSTOMER NAME"]}</p>
-          <p><b>Address:</b> ${data["ADDRESS"]}</p>
-          <label for="agentName">Agent Name:</label>
-          <select id="agentName">
-            <option>${data["AGENT NAME"] || "Select"}</option>
-            <option>Agent A</option>
-            <option>Agent B</option>
-          </select>
-          <br>
-          <label for="agentRemark">Agent Remark:</label>
-          <select id="agentRemark">
-            <option>${data["AGENT REMARK 1"] || "Select"}</option>
-            <option>Remark A</option>
-            <option>Remark B</option>
-          </select>
-          <br>
-          <label for="attemptNumber">Attempt Number:</label>
-          <select id="attemptNumber">
-            <option>${data["ATEEMPT NUMBER"] || "Select"}</option>
-            <option>1</option>
-            <option>2</option>
-          </select>
-          <br>
-          <button onclick="submitUpdate('${data["ORDER ID"]}')">Submit</button>
-        </div>
-      `;
     }
 
-    async function submitUpdate(orderId) {
-      const agentName = document.getElementById("agentName").value;
-      const agentRemark = document.getElementById("agentRemark").value;
-      const attemptNumber = document.getElementById("attemptNumber").value;
+    // Submit updates to the server
+    async function submitOrderUpdates() {
+      const orderId = document.getElementById("orderId").value.trim();
+      const agentName = document.getElementById("agentName").value.trim();
+      const agentRemark = document.getElementById("agentRemark").value.trim();
+      const attemptNumber = document.getElementById("attemptNumber").value.trim();
 
-      const response = await fetch(webAppURL, {
-        method: "POST",
-        body: JSON.stringify({
-          orderId,
-          agentName,
-          agentRemark,
-          attemptNumber,
-        }),
-      });
+      if (!orderId) {
+        alert("Order ID is required.");
+        return;
+      }
 
-      const result = await response.json();
-      alert(result.success ? "Update successful!" : result.error);
+      const payload = {
+        orderId,
+        agentName,
+        agentRemark,
+        attemptNumber,
+      };
+
+      try {
+        const response = await fetch(SCRIPT_URL, {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify(payload),
+        });
+
+        const result = await response.json();
+
+        if (result.error) {
+          alert(`Error: ${result.error}`);
+          return;
+        }
+
+        alert("Order details updated successfully.");
+      } catch (error) {
+        console.error("Error submitting updates:", error);
+        alert("An error occurred while submitting updates.");
+      }
     }
   </script>
 </body>
+</html>
