--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
   </form>
 
   <script>
-    const SCRIPT_URL = "https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec"; // Replace with your Apps Script URL
+    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzLlKoTRtw5NxOJbD8b3k0llFVEQmgLEZ95XfB4Lq05ZEuIzUXPZefBfvfqkk_qVZdd/exec
+"; // Replace with your Apps Script URL
 
     // Fetch order details based on Order ID
     async function fetchOrderDetails() {
