--- a/index.html
+++ b/index.html
@@ -1,173 +1,160 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Order Management - NXTLIFT PVT. LTD.</title>
+    <title>Order Management | NXTLIFT PVT. LTD.</title>
     <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: 'Arial', sans-serif;
-      }
       body {
+        font-family: 'Arial', sans-serif;
         background-color: #f9f9f9;
         display: flex;
         justify-content: center;
         align-items: center;
         min-height: 100vh;
-        padding: 20px;
+        margin: 0;
       }
       .container {
-        background: #ffffff;
-        width: 100%;
-        max-width: 600px;
+        background-color: white;
         padding: 30px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        border-radius: 12px;
+        border-radius: 10px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        max-width: 600px;
+        width: 100%;
       }
-      header {
+      h1, h2 {
         text-align: center;
-        margin-bottom: 20px;
       }
-      header h1 {
-        color: #333;
-        font-size: 24px;
-        text-transform: uppercase;
-      }
-      header .brand {
-        font-size: 18px;
-        color: #007bff;
-        font-weight: bold;
-      }
-      form {
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
+      .form-group {
+        margin-bottom: 15px;
       }
       label {
-        color: #555;
         font-weight: bold;
+        display: block;
+        margin-bottom: 5px;
       }
-      input[type="text"],
-      select {
-        padding: 10px;
-        border: 1px solid #ddd;
-        border-radius: 8px;
+      input[type="text"] {
         width: 100%;
+        padding: 8px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
       }
-      .buttons {
+      .button-group {
         display: flex;
         justify-content: space-between;
-        gap: 10px;
+        margin-top: 20px;
       }
       button {
+        background-color: #007bff;
+        color: white;
         padding: 10px 15px;
-        background: #007bff;
-        color: #fff;
         border: none;
-        border-radius: 8px;
+        border-radius: 4px;
         cursor: pointer;
-        transition: background 0.3s;
-        width: 48%;
       }
       button:hover {
-        background: #0056b3;
+        background-color: #0056b3;
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <header>
-        <h1>Order Management</h1>
-        <div class="brand">NXTLIFT PVT. LTD.</div>
-      </header>
-      <form id="order-form">
+      <h1>ORDER MANAGEMENT</h1>
+      <h2 style="color: #007bff;">NXTLIFT PVT. LTD.</h2>
+
+      <div class="form-group">
         <label for="orderId">Order ID:</label>
-        <input type="text" id="orderId" name="orderId" required />
+        <input type="text" id="orderId" placeholder="Enter Order ID">
+      </div>
 
-        <label for="agentName">Agent Name:</label>
-        <input type="text" id="agentName" name="agentName" />
+      <button onclick="fetchOrderDetails()">Fetch Order Details</button>
 
-        <label for="agentRemark">Agent Remark 1:</label>
-        <input type="text" id="agentRemark" name="agentRemark" />
+      <div id="orderDetails" style="margin-top: 20px; display: none;">
+        <h3>Order Details</h3>
+        <p><strong>Customer Name:</strong> <span id="customerName"></span></p>
+        <p><strong>Address:</strong> <span id="address"></span></p>
+        <p><strong>Order Amount:</strong> <span id="orderAmount"></span></p>
+        <p><strong>Product Name:</strong> <span id="productName"></span></p>
+        <p><strong>Error Reason:</strong> <span id="errorReason"></span></p>
 
-        <label for="attemptNumber">Attempt Number:</label>
-        <input type="text" id="attemptNumber" name="attemptNumber" />
-
-        <div class="buttons">
-          <button type="button" id="fetchButton">Fetch Order Details</button>
-          <button type="submit" id="submitButton">Submit Updates</button>
+        <div class="form-group">
+          <label for="agentName">Agent Name:</label>
+          <input type="text" id="agentName">
         </div>
-      </form>
-    </div>
-    <script>
-      const apiUrl = "https://script.google.com/macros/s/AKfycbyk3l8IO6YXbUhG5W2mCdn4NmceK8WorIrITWyqrGmQ0148GUXVN5o0J7BF3-2ktftOuA/exec";
 
-      document.getElementById("fetchButton").addEventListener("click", async () => {
+        <div class="form-group">
+          <label for="agentRemark">Agent Remark 1:</label>
+          <input type="text" id="agentRemark">
+        </div>
+
+        <div class="form-group">
+          <label for="attemptNumber">Attempt Number:</label>
+          <input type="text" id="attemptNumber">
+        </div>
+
+        <div class="button-group">
+          <button onclick="submitUpdates()">Submit Updates</button>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      const deploymentId = "AKfycbyk3l8IO6YXbUhG5W2mCdn4NmceK8WorIrITWyqrGmQ0148GUXVN5o0J7BF3-2ktftOuA";
+
+      function fetchOrderDetails() {
         const orderId = document.getElementById("orderId").value.trim();
+
         if (!orderId) {
           alert("Please enter an Order ID.");
           return;
         }
-        try {
-          const response = await fetch(`${apiUrl}?orderId=${orderId}`);
-          const data = await response.json();
 
-          if (data.error) {
-            alert(data.error);
-          } else {
-            document.getElementById("agentName").value = data["AGENT NAME"] || "";
-            document.getElementById("agentRemark").value = data["AGENT REMARK 1"] || "";
-            document.getElementById("attemptNumber").value = data["ATEEMPT NUMBER"] || "";
-          }
-        } catch (error) {
-          alert("Failed to fetch order details.");
-          console.error(error);
-        }
-      });
+        fetch(`https://script.google.com/macros/s/${deploymentId}/exec?orderId=${orderId}`)
+          .then(response => response.json())
+          .then(data => {
+            if (data.error) {
+              alert(data.error);
+              return;
+            }
 
-      document.getElementById("order-form").addEventListener("submit", async (event) => {
-        event.preventDefault();
+            document.getElementById("orderDetails").style.display = "block";
+            document.getElementById("customerName").textContent = data["CUSTOMER NAME"] || "N/A";
+            document.getElementById("address").textContent = data["ADDRESS"] || "N/A";
+            document.getElementById("orderAmount").textContent = data["ORDER AMOUNT"] || "N/A";
+            document.getElementById("productName").textContent = data["PRODUCT NAME"] || "N/A";
+            document.getElementById("errorReason").textContent = data["ERROR REASON"] || "N/A";
+          })
+          .catch(error => alert("Failed to fetch order details: " + error));
+      }
 
+      function submitUpdates() {
         const orderId = document.getElementById("orderId").value.trim();
         const agentName = document.getElementById("agentName").value.trim();
         const agentRemark = document.getElementById("agentRemark").value.trim();
         const attemptNumber = document.getElementById("attemptNumber").value.trim();
 
         if (!orderId) {
-          alert("Order ID is required.");
+          alert("Order ID is required for updates.");
           return;
         }
 
-        const payload = {
-          orderId,
-          agentName,
-          agentRemark,
-          attemptNumber,
-        };
+        const data = { orderId, agentName, agentRemark, attemptNumber };
 
-        try {
-          const response = await fetch(apiUrl, {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-            },
-            body: JSON.stringify(payload),
-          });
-          const data = await response.json();
-
-          if (data.error) {
-            alert(data.error);
-          } else {
-            alert("Order details updated successfully.");
-          }
-        } catch (error) {
-          alert("Failed to submit order updates.");
-          console.error(error);
-        }
-      });
+        fetch(`https://script.google.com/macros/s/${deploymentId}/exec`, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(data)
+        })
+          .then(response => response.json())
+          .then(data => {
+            if (data.error) {
+              alert(data.error);
+            } else {
+              alert("Order details updated successfully.");
+            }
+          })
+          .catch(error => alert("Failed to submit updates: " + error));
+      }
     </script>
   </body>
 </html>
