--- a/index.html
+++ b/index.html
@@ -1,160 +1,168 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Order Management | NXTLIFT PVT. LTD.</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Order Management - NXTLIFT PVT. LTD.</title>
     <style>
       body {
-        font-family: 'Arial', sans-serif;
-        background-color: #f9f9f9;
+        font-family: Arial, sans-serif;
         display: flex;
         justify-content: center;
         align-items: center;
         min-height: 100vh;
-        margin: 0;
+        background-color: #f8f9fa;
       }
       .container {
-        background-color: white;
-        padding: 30px;
+        background: white;
+        padding: 20px 40px;
         border-radius: 10px;
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        max-width: 600px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        max-width: 500px;
         width: 100%;
       }
-      h1, h2 {
+      h1 {
         text-align: center;
-      }
-      .form-group {
-        margin-bottom: 15px;
       }
       label {
         font-weight: bold;
-        display: block;
-        margin-bottom: 5px;
+        margin-top: 10px;
       }
+      select,
       input[type="text"] {
         width: 100%;
         padding: 8px;
+        margin: 5px 0 15px;
         border: 1px solid #ccc;
-        border-radius: 4px;
-      }
-      .button-group {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 20px;
+        border-radius: 5px;
       }
       button {
+        width: 48%;
+        padding: 10px;
         background-color: #007bff;
         color: white;
-        padding: 10px 15px;
         border: none;
-        border-radius: 4px;
+        border-radius: 5px;
         cursor: pointer;
       }
       button:hover {
         background-color: #0056b3;
       }
+      .button-group {
+        display: flex;
+        justify-content: space-between;
+      }
     </style>
   </head>
   <body>
     <div class="container">
-      <h1>ORDER MANAGEMENT</h1>
-      <h2 style="color: #007bff;">NXTLIFT PVT. LTD.</h2>
+      <h1>ORDER MANAGEMENT<br />
+        <span style="color: #007bff">NXTLIFT PVT. LTD.</span>
+      </h1>
 
-      <div class="form-group">
-        <label for="orderId">Order ID:</label>
-        <input type="text" id="orderId" placeholder="Enter Order ID">
-      </div>
+      <label for="orderId">Order ID:</label>
+      <input type="text" id="orderId" placeholder="Enter Order ID" />
 
-      <button onclick="fetchOrderDetails()">Fetch Order Details</button>
+      <label for="customerDetails">Customer Details:</label>
+      <textarea id="customerDetails" rows="5" readonly placeholder="Details will appear here..."></textarea>
 
-      <div id="orderDetails" style="margin-top: 20px; display: none;">
-        <h3>Order Details</h3>
-        <p><strong>Customer Name:</strong> <span id="customerName"></span></p>
-        <p><strong>Address:</strong> <span id="address"></span></p>
-        <p><strong>Order Amount:</strong> <span id="orderAmount"></span></p>
-        <p><strong>Product Name:</strong> <span id="productName"></span></p>
-        <p><strong>Error Reason:</strong> <span id="errorReason"></span></p>
+      <label for="agentName">Agent Name:</label>
+      <select id="agentName"></select>
 
-        <div class="form-group">
-          <label for="agentName">Agent Name:</label>
-          <input type="text" id="agentName">
-        </div>
+      <label for="agentRemark">Agent Remark 1:</label>
+      <select id="agentRemark"></select>
 
-        <div class="form-group">
-          <label for="agentRemark">Agent Remark 1:</label>
-          <input type="text" id="agentRemark">
-        </div>
+      <label for="attemptNumber">Attempt Number:</label>
+      <select id="attemptNumber"></select>
 
-        <div class="form-group">
-          <label for="attemptNumber">Attempt Number:</label>
-          <input type="text" id="attemptNumber">
-        </div>
-
-        <div class="button-group">
-          <button onclick="submitUpdates()">Submit Updates</button>
-        </div>
+      <div class="button-group">
+        <button onclick="fetchOrderDetails()">Fetch Order Details</button>
+        <button onclick="submitUpdates()">Submit Updates</button>
       </div>
     </div>
 
     <script>
       const deploymentId = "AKfycbyk3l8IO6YXbUhG5W2mCdn4NmceK8WorIrITWyqrGmQ0148GUXVN5o0J7BF3-2ktftOuA";
+      const apiUrl = `https://script.google.com/macros/s/${deploymentId}/exec`;
 
-      function fetchOrderDetails() {
-        const orderId = document.getElementById("orderId").value.trim();
+      async function fetchDropdownData() {
+        const agentNames = ["MANAB", "RAJ", "PRIYA", "ANITA"];
+        const remarks = ["ADDRESS PINCODE ERROR", "LANGUAGE BARRIER", "BAD ADDRESS", "ORDER CANCEL"];
+        const attemptNumbers = ["1", "2", "3", "4"];
 
+        populateDropdown("agentName", agentNames);
+        populateDropdown("agentRemark", remarks);
+        populateDropdown("attemptNumber", attemptNumbers);
+      }
+
+      function populateDropdown(elementId, options) {
+        const dropdown = document.getElementById(elementId);
+        dropdown.innerHTML = "<option value=''>Select</option>";
+        options.forEach(option => {
+          const opt = document.createElement("option");
+          opt.value = option;
+          opt.textContent = option;
+          dropdown.appendChild(opt);
+        });
+      }
+
+      async function fetchOrderDetails() {
+        const orderId = document.getElementById("orderId").value;
         if (!orderId) {
           alert("Please enter an Order ID.");
           return;
         }
 
-        fetch(`https://script.google.com/macros/s/${deploymentId}/exec?orderId=${orderId}`)
-          .then(response => response.json())
-          .then(data => {
-            if (data.error) {
-              alert(data.error);
-              return;
-            }
+        try {
+          const response = await fetch(`${apiUrl}?orderId=${orderId}`);
+          const data = await response.json();
 
-            document.getElementById("orderDetails").style.display = "block";
-            document.getElementById("customerName").textContent = data["CUSTOMER NAME"] || "N/A";
-            document.getElementById("address").textContent = data["ADDRESS"] || "N/A";
-            document.getElementById("orderAmount").textContent = data["ORDER AMOUNT"] || "N/A";
-            document.getElementById("productName").textContent = data["PRODUCT NAME"] || "N/A";
-            document.getElementById("errorReason").textContent = data["ERROR REASON"] || "N/A";
-          })
-          .catch(error => alert("Failed to fetch order details: " + error));
+          if (data.error) {
+            alert(data.error);
+            return;
+          }
+
+          document.getElementById("customerDetails").value = `Customer: ${data["CUSTOMER NAME"]}\nAddress: ${data["ADDRESS"]}\nProduct: ${data["PRODUCT NAME"]}\nAmount: ${data["ORDER AMOUNT"]}\nError: ${data["ERROR REASON"]}`;
+        } catch (error) {
+          console.error("Error fetching order details:", error);
+          alert("Failed to fetch order details.");
+        }
       }
 
-      function submitUpdates() {
-        const orderId = document.getElementById("orderId").value.trim();
-        const agentName = document.getElementById("agentName").value.trim();
-        const agentRemark = document.getElementById("agentRemark").value.trim();
-        const attemptNumber = document.getElementById("attemptNumber").value.trim();
+      async function submitUpdates() {
+        const orderId = document.getElementById("orderId").value;
+        const agentName = document.getElementById("agentName").value;
+        const agentRemark = document.getElementById("agentRemark").value;
+        const attemptNumber = document.getElementById("attemptNumber").value;
 
-        if (!orderId) {
-          alert("Order ID is required for updates.");
+        if (!orderId || !agentName || !agentRemark || !attemptNumber) {
+          alert("Please fill in all fields before submitting.");
           return;
         }
 
-        const data = { orderId, agentName, agentRemark, attemptNumber };
+        try {
+          const response = await fetch(apiUrl, {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ orderId, agentName, agentRemark, attemptNumber })
+          });
 
-        fetch(`https://script.google.com/macros/s/${deploymentId}/exec`, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(data)
-        })
-          .then(response => response.json())
-          .then(data => {
-            if (data.error) {
-              alert(data.error);
-            } else {
-              alert("Order details updated successfully.");
-            }
-          })
-          .catch(error => alert("Failed to submit updates: " + error));
+          const data = await response.json();
+
+          if (data.error) {
+            alert(data.error);
+            return;
+          }
+
+          alert("Update successful!");
+        } catch (error) {
+          console.error("Error submitting updates:", error);
+          alert("Failed to submit updates.");
+        }
       }
+
+      // Initialize dropdowns on page load
+      fetchDropdownData();
     </script>
   </body>
 </html>
