--- a/index.html
+++ b/index.html
@@ -1,168 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Order Management - NXTLIFT PVT. LTD.</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        background-color: #f8f9fa;
-      }
-      .container {
-        background: white;
-        padding: 20px 40px;
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        max-width: 500px;
-        width: 100%;
-      }
-      h1 {
-        text-align: center;
-      }
-      label {
-        font-weight: bold;
-        margin-top: 10px;
-      }
-      select,
-      input[type="text"] {
-        width: 100%;
-        padding: 8px;
-        margin: 5px 0 15px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-      }
-      button {
-        width: 48%;
-        padding: 10px;
-        background-color: #007bff;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-      }
-      button:hover {
-        background-color: #0056b3;
-      }
-      .button-group {
-        display: flex;
-        justify-content: space-between;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <h1>ORDER MANAGEMENT<br />
-        <span style="color: #007bff">NXTLIFT PVT. LTD.</span>
-      </h1>
-
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Order Management System</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background-color: #f9f9f9;
+    }
+    .form-group {
+      margin-bottom: 15px;
+    }
+    label {
+      display: block;
+      margin-bottom: 5px;
+    }
+    select, input {
+      width: 100%;
+      padding: 8px;
+      box-sizing: border-box;
+    }
+    button {
+      background-color: #4CAF50;
+      color: white;
+      padding: 10px 15px;
+      border: none;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #45a049;
+    }
+  </style>
+</head>
+<body>
+  <h1>Order Management System</h1>
+  <form id="order-form">
+    <div class="form-group">
       <label for="orderId">Order ID:</label>
-      <input type="text" id="orderId" placeholder="Enter Order ID" />
-
-      <label for="customerDetails">Customer Details:</label>
-      <textarea id="customerDetails" rows="5" readonly placeholder="Details will appear here..."></textarea>
-
-      <label for="agentName">Agent Name:</label>
-      <select id="agentName"></select>
-
-      <label for="agentRemark">Agent Remark 1:</label>
-      <select id="agentRemark"></select>
-
-      <label for="attemptNumber">Attempt Number:</label>
-      <select id="attemptNumber"></select>
-
-      <div class="button-group">
-        <button onclick="fetchOrderDetails()">Fetch Order Details</button>
-        <button onclick="submitUpdates()">Submit Updates</button>
-      </div>
+      <input type="text" id="orderId" name="orderId" required>
     </div>
 
-    <script>
-      const deploymentId = "AKfycbyk3l8IO6YXbUhG5W2mCdn4NmceK8WorIrITWyqrGmQ0148GUXVN5o0J7BF3-2ktftOuA";
-      const apiUrl = `https://script.google.com/macros/s/${deploymentId}/exec`;
+    <div class="form-group">
+      <label for="agentName">Agent Name:</label>
+      <select id="agentName" name="agentName" required></select>
+    </div>
 
-      async function fetchDropdownData() {
-        const agentNames = ["MANAB", "RAJ", "PRIYA", "ANITA"];
-        const remarks = ["ADDRESS PINCODE ERROR", "LANGUAGE BARRIER", "BAD ADDRESS", "ORDER CANCEL"];
-        const attemptNumbers = ["1", "2", "3", "4"];
+    <div class="form-group">
+      <label for="agentRemark">Agent Remark:</label>
+      <select id="agentRemark" name="agentRemark" required></select>
+    </div>
 
-        populateDropdown("agentName", agentNames);
-        populateDropdown("agentRemark", remarks);
-        populateDropdown("attemptNumber", attemptNumbers);
+    <div class="form-group">
+      <label for="attemptNumber">Attempt Number:</label>
+      <select id="attemptNumber" name="attemptNumber" required></select>
+    </div>
+
+    <button type="submit">Update Order</button>
+  </form>
+
+  <div id="result"></div>
+
+  <script>
+    const apiUrl = "https://script.google.com/macros/s/AKfycbxvEzr2_Nx2uj-ONIZPf5ZMd_JbQpES7AbCJSJLf5M9nHy66tJxr9NBBvIxPLWecxja7A/exec";
+
+    document.addEventListener("DOMContentLoaded", async () => {
+      try {
+        const response = await fetch(`${apiUrl}?action=getDropdownData`);
+        const dropdownData = await response.json();
+
+        populateDropdown("agentName", dropdownData.agentNames);
+        populateDropdown("agentRemark", dropdownData.agentRemarks);
+        populateDropdown("attemptNumber", dropdownData.attemptNumbers);
+      } catch (error) {
+        console.error("Error fetching dropdown data:", error);
       }
+    });
 
-      function populateDropdown(elementId, options) {
-        const dropdown = document.getElementById(elementId);
-        dropdown.innerHTML = "<option value=''>Select</option>";
-        options.forEach(option => {
-          const opt = document.createElement("option");
-          opt.value = option;
-          opt.textContent = option;
-          dropdown.appendChild(opt);
+    function populateDropdown(elementId, options) {
+      const select = document.getElementById(elementId);
+      options.forEach(option => {
+        const opt = document.createElement("option");
+        opt.value = option;
+        opt.textContent = option;
+        select.appendChild(opt);
+      });
+    }
+
+    document.getElementById("order-form").addEventListener("submit", async (event) => {
+      event.preventDefault();
+
+      const orderId = document.getElementById("orderId").value;
+      const agentName = document.getElementById("agentName").value;
+      const agentRemark = document.getElementById("agentRemark").value;
+      const attemptNumber = document.getElementById("attemptNumber").value;
+
+      const requestData = { orderId, agentName, agentRemark, attemptNumber };
+
+      try {
+        const response = await fetch(apiUrl, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(requestData)
         });
+
+        const result = await response.json();
+
+        document.getElementById("result").textContent = result.success
+          ? `Order updated successfully. Row: ${result.updatedRow}`
+          : `Error: ${result.error}`;
+      } catch (error) {
+        document.getElementById("result").textContent = `Error updating order: ${error.message}`;
       }
-
-      async function fetchOrderDetails() {
-        const orderId = document.getElementById("orderId").value;
-        if (!orderId) {
-          alert("Please enter an Order ID.");
-          return;
-        }
-
-        try {
-          const response = await fetch(`${apiUrl}?orderId=${orderId}`);
-          const data = await response.json();
-
-          if (data.error) {
-            alert(data.error);
-            return;
-          }
-
-          document.getElementById("customerDetails").value = `Customer: ${data["CUSTOMER NAME"]}\nAddress: ${data["ADDRESS"]}\nProduct: ${data["PRODUCT NAME"]}\nAmount: ${data["ORDER AMOUNT"]}\nError: ${data["ERROR REASON"]}`;
-        } catch (error) {
-          console.error("Error fetching order details:", error);
-          alert("Failed to fetch order details.");
-        }
-      }
-
-      async function submitUpdates() {
-        const orderId = document.getElementById("orderId").value;
-        const agentName = document.getElementById("agentName").value;
-        const agentRemark = document.getElementById("agentRemark").value;
-        const attemptNumber = document.getElementById("attemptNumber").value;
-
-        if (!orderId || !agentName || !agentRemark || !attemptNumber) {
-          alert("Please fill in all fields before submitting.");
-          return;
-        }
-
-        try {
-          const response = await fetch(apiUrl, {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ orderId, agentName, agentRemark, attemptNumber })
-          });
-
-          const data = await response.json();
-
-          if (data.error) {
-            alert(data.error);
-            return;
-          }
-
-          alert("Update successful!");
-        } catch (error) {
-          console.error("Error submitting updates:", error);
-          alert("Failed to submit updates.");
-        }
-      }
-
-      // Initialize dropdowns on page load
-      fetchDropdownData();
-    </script>
-  </body>
+    });
+  </script>
+</body>
 </html>
